# EpiChronos

./: .gitignore  EpiChronos_Manuscript.docx  LICENSE  README.md  Run_EpiChronos.bat  demo.py  generate_manuscript.py  gui.py  paper.bib  paper.md  pyproject.toml  step1_real_data.py  step2_clock_accuracy.py  step3_benchmarking.py  step4_concordance.py  step5_publication_assembly.py
.github/workflows/: publish.yml
epichronos/: __init__.py  ai.py  clocks.py  core.py  decon.py  enrich.py  pacemaker.py  stats.py  transcription.py  viz.py
epichronos/resources/: blood_decon_model.json  gene_coords.json  hannum_model.json  horvath_model.json  pathway_db.json
realdata/: convert_paper_to_docx.py  epichronos_validation_results.json  generate_publication_plots.py  generate_workflow_schematic.py  publication_tables.md
scripts/: benchmark_dml.py  build_gene_coords.py  build_pathway_db.py
tests/: __init__.py  test_advanced_modality.py  test_ai.py  test_clocks.py  test_core.py  test_decon.py  test_enrich.py  test_modality.py  test_pacemaker.py  test_stats.py  test_transcription.py
