[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epichronos"
version = "0.2.0"
description = "A High-Performance Unified Downstream DNA Methylation & Biological Aging Analysis Suite in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "EpiChronos Developer Team", email = "rashidmstar12@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "plotly>=5.14.0",
    "jinja2>=3.1.2",
    "pyarrow>=12.0.0",
    "streamlit>=1.30.0",
    "pyliftover>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Rashidmstar12/EpiChronos"
Bug-Tracker = "https://github.com/Rashidmstar12/EpiChronos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["epichronos*"]
